<resources>
    <string name="app_name">News</string>
    <string name="news">News</string>
    <string name="short_description">Short description</string>
    <string name="source">Source</string>
    <string name="how_long_ago_was_it">How long ago was it</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>